# SpeechEvalKit

./: LICENCE  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
results/experiments/exp_001_2026-05-03_22-23-03_mos/: mos_scores.csv  mos_scores_summary.csv
speechevalkit/: __init__.py  cli.py  evaluate.py  gui.py
speechevalkit/metrics/: cer.py  cosine.py  gui.py  init.py  mcd.py  mer.py  nisqa.py  pesq.py  si_sdr.py  stoi.py  wer.py
speechevalkit/utils/: alignment.py  audio.py  demo_audio_eval.py  demo_gui.py  demo_smos_gui.py  demo_text_eval.py  experiment.py  init.py  io.py  pairing.py  workers.py
